# Programavimo_praktika_zaidimas

./: CMakeLists.txt  main.cpp
Data/Configurations/: config.xml
Data/Maps/: Level1.xml
Source/Core/: GUI.cpp  GUI.h  Game.cpp  Game.h
Source/Misc/: Button.cpp  Button.h  FontManager.cpp  FontManager.h
Source/Systems/Actions/: Actions.cpp  Actions.h
Source/Systems/Enemy/: Enemy.cpp  Enemy.h
Source/Systems/MapSystem/: Map.cpp  Map.h
Source/Systems/Player/: Player.cpp  Player.h
